c4prj2_input/grade.txt
Grading at Fri Jun 26 03:48:54 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:10:11: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘n_deck’
   while(fc->n_deck<=index){
           ^
Compilation of future.c failed

Overall Grade: F
